@@ -35,14 +35,15 @@ a img {
  ! - <P></P></LI>
  ! - </UL>
   -->
-<DT>XXXX-XX-XX
+<DT>2012-01-04: Prooftree 0.9 released
 <DD>
 <UL>
 <LI>fix case when some existential variables is instantiated by
 the last proof command
 <P></P></LI>
 </UL>
-<DT>2012-01-03
+
+<DT>2012-01-03: Prooftree 0.8 released
 <DD>
 <UL>
 <LI>Works now with standard versions of Coq (&GT;= 8.4beta)
