@@ -1,3 +1,7 @@
+2012-01-04  Hendrik Tews <prooftree@askra.de>
+
+	* prepare changes.html for release
+
 2012-01-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* fix debian/changelog
